# victor_aws_embedded_c_sdk

./: .gitmodules
demos/http/http_demo_s3_download/: demo_config.h
demos/http/http_demo_s3_upload/: demo_config.h
demos/jobs/jobs_demo_mosquitto/: CMakeLists.txt  jobs_demo_mosquitto.c
demos/mqtt/mqtt_demo_basic_tls_atec_device/: CMakeLists.txt  mqtt_demo_basic_tls_atec_device.c
demos/mqtt/mqtt_demo_plaintext/: demo_config.h
platform/posix/: posixFilePaths.cmake
platform/posix/transport/: CMakeLists.txt
platform/posix/transport/include/: atec_mbedtls_posix.h
platform/posix/transport/src/: atec_mbedtls_posix.c  openssl_posix.c
